# rs-mat32

./: Cargo.toml  README.md
src/: create.rs  lib.rs  misc.rs  mul.rs  sdiv.rs  set.rs  transform.rs
